--- a/lua.html
+++ b/lua.html
@@ -36,7 +36,7 @@
                 }, 1000);
             }
         </script>
-        <script type='text/javascript' src='lua.asm.js'></script>
+        <script type='text/javascript' src='lua.js'></script>
     </head>
     <body>
         <div>
